<resources>
    <string name="app_name">MyRecipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="cook_time">Cook Time</string>
    <string name="type_of_food">Type</string>
    <string name="minutes">min</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_steps">Steps</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_category">Add new category</string>
    <string name="food">Food</string>
    <string name="modify">Modify</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>
</resources>