<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0"
        tools:context=".controller.RecipeAddFragment"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/leftArrow_changePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:forceHasOverlappingRendering="true"
                android:src="@drawable/left_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/viewFlipper_food_images"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/rightArrow_changePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:forceHasOverlappingRendering="true"
                android:src="@drawable/right_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/viewFlipper_food_images"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.laoa.myrecipe.models.CustomViewFlipper
                android:id="@+id/viewFlipper_food_images"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"

                app:layout_constraintEnd_toEndOf="@+id/rightArrow_changePicture"
                app:layout_constraintStart_toStartOf="@+id/leftArrow_changePicture"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/cameraButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewFlipper_food_images" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cameraButton"
                app:layout_constraintVertical_bias="0"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe_name"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/recipe_name_editText"
                        android:layout_marginLeft="8dp"
                        android:maxLines="1"
                        android:inputType="text"
                        android:layout_weight="1"
                        android:ems="10" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cook_time"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/cook_time_editText"
                        android:minWidth="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:layout_marginRight="8dp"
                        android:inputType="time"
                        android:ems="10" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/type_of_food"
                        android:layout_marginEnd="8dp"
                        android:textSize="16sp" />

                    <Spinner
                        android:layout_width="200dp"
                        android:spinnerMode="dropdown"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner_type_of_food"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        />
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/add_new_type"
                        android:src="@drawable/add_icon"
                        android:backgroundTint="@android:color/transparent"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredients"
                        />
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/ingredients_editText"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:ems="10" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe_steps"
                        />
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/recipe_steps_editText"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:ems="10" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        />
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/description_editText"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:ems="10" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/save_button"
                        android:text="@string/save"
                        android:layout_marginEnd="16dp"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cancel_button"
                        android:layout_marginStart="16dp"
                        android:text="@string/cancel"
                        />

                </LinearLayout>




            </LinearLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

